# cuadra

./: Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: check.yml  nostd.yml  test.yml
doc/: LICENSE-MIT
src/: clamper.rs  error.rs  lib.rs  position.rs  size.rs  tests.rs  zone.rs
src/grid/: grid2d.rs  mod.rs  tests.rs
