[package]
name = "cuadra"
description = "layouts"
version = "0.2.0"
edition = "2021"
rust-version = "1.64.0"
authors = ["José Luis Cruz <joseluis@andamira.net>"]
license = "MIT OR Apache-2.0"
include = [
    "/src/**/*.rs",
    "/Cargo.toml",
	"/LICENSE-*",
	"/README.md"
]
categories = []
keywords = []
publish = true

[dependencies]
paste = "1.0.11"

[features]
default = ["std"]
std = []

[dev-dependencies]

[badges]
maintenance = { status = "experimental" }
