[package]
name = "cuadra"
description = "layout types"
version = "0.3.1"
edition = "2021"
rust-version = "1.64.0"
authors = ["José Luis Cruz <joseluis@andamira.net>"]
license = "MIT OR Apache-2.0"
include = [
    "/src/**/*.rs",
    "/Cargo.toml",
	"/LICENSE-*",
	"/README.md"
]
categories = []
keywords = []
publish = true

[features]
default = ["std"]
#
std = []
#
nightly = [] # only used for docs.rs


[dependencies]
paste = "1.0.12"

[dev-dependencies]


[badges]
maintenance = { status = "experimental" }

[package.metadata.docs.rs]
features = ["nightly"]
